# docvision-rag

./: .env.example  LICENSE  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  config.py  constants.py  database.py  exceptions.py  logger.py  main.py
app/models/: __init__.py  chat.py  chunk.py  document.py  image.py
app/routes/: chat.py  documents.py  health.py
app/schemas/: chat.py  document.py  vision.py
app/services/: __init__.py  chat_service.py  chunking_service.py  document_service.py  embedding_service.py  ingestion_service.py  llm_service.py  pdf_service.py  storage_service.py  vectorstore_service.py  vision_service.py
app/utils/: __init__.py  retry.py  tokens.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Sidebar.jsx  StatusBadge.jsx
frontend/src/pages/: ChatPage.jsx  DashboardPage.jsx  UploadPage.jsx
tests/: conftest.py  test_app.py  test_chunking.py  test_injection.py  test_retry.py  test_settings.py  test_vision_schema.py
