[project]
name = "docvision-rag"
version = "1.0.0"
description = "DocVision — Multimodal Document Intelligence Platform. Production-grade multimodal RAG that makes diagrams, screenshots and figures inside PDFs semantically searchable."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DocVision Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "cloudinary>=1.41.0",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24.0",
    "google-genai>=0.8.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "tiktoken>=0.8.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008", "N805"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
